Fix external link on mobile for homepage promo

--- a/app/assets/stylesheets/views/_homepage.scss
+++ b/app/assets/stylesheets/views/_homepage.scss
@@ -91,7 +91,11 @@ body.homepage {
 
       a[rel~="external"] {
         @include external-link-default;
-        @include external-link-19;
+        @include external-link-16;
+
+        @include media(tablet) {
+          @include external-link-19;
+        }
       }
     }
   }
